--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <head>
 <meta charset="UTF-8">
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<h1>Odin Recipes</h1>
+<h1 class="recipes">Odin Recipes </h1>
 <p><a href="recipes/pizza.html">Pizza</a>
 <a href="recipes/tacos.html">Tacos</a> 
 <a href="recipes/burger.html">Burgers</a>
